# baby_sense_monitor

./: .gitignore  99-pt1.rules  Baby_sense-1671418851290.json  Dockerfile.nginx  README.md  docker-compose.yml  grafana.ini  mpu6050.py  nginx.conf  read_envsensor.py  rest_api.py  servo.py  start.sh  start_container.sh  start_ffmpeg.sh  stop_container.sh  upload_data.py
image/: arch.drawio
lepton/: CMakeLists.txt  main.cpp
nginx/html/: index.html  style.css
